--- a/web/loadData.xhtml
+++ b/web/loadData.xhtml
@@ -6,12 +6,9 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        Hello from Facelets
-        <br />
-        <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
-        
-         <h2>List of All Web pages </h2>
-         <a href =""
+        <h:form>
+        <h:commandButton value="Load Dummy Data" action="#{loadDataMB.loadData()}"/>
+        </h:form>
     </h:body>
 </html>
 
