--- a/web/pages/admissionStaff/searchApplicants.xhtml
+++ b/web/pages/admissionStaff/searchApplicants.xhtml
@@ -9,30 +9,41 @@
     <ui:composition template="../../resources/templates/admissionStaffTemplate.xhtml">
 
         <ui:define name="body">
+            
             <h:form>
-                <p:panel id="panel" header="Search Applications" style="margin-bottom:10px;">
-                    <p:messages id="messages" />
+                <p:messages id="messages" />
+                <p:panel id="panel" header="Search Applications">
+
                     <h:panelGrid columns="2">
                         <h:outputLabel for="email" value="Email:" />
-                        <p:inputText id="email" required="true" />
+                        <p:inputText id="email" value="#{searchMB.email}"/>
 
                         <h:outputLabel for="country" value="Country: " />
-                        <p:selectOneMenu id="country" value="#{buttonBean.number}">
+                        <h:selectOneMenu id="country" value="#{searchMB.country}">
                             <f:selectItem itemLabel="Select One" itemValue="" />
-                            <f:selectItem itemLabel="Option 1" itemValue="11" />
-                            <f:selectItem itemLabel="Option 2" itemValue="222" />
-                            <f:selectItem itemLabel="Option 3" itemValue="333" />
-                        </p:selectOneMenu>
-
+                            <f:selectItem itemLabel="Nepal" itemValue="Nepal" />
+                            <f:selectItem itemLabel="Iran" itemValue="Iran" />
+                            <f:selectItem itemLabel="Bangladesh" itemValue="Bangladesh" />
+                            <f:selectItem itemLabel="Ethopia" itemValue="Ethopia" />
+                        </h:selectOneMenu>
+                      
                         <h:outputText value="Submit Status: " />
-                        <p:selectOneRadio id="status" value="1">
-                            <f:selectItem itemLabel="Option 1" itemValue="1" />
-                            <f:selectItem itemLabel="Option 2" itemValue="2" />
-                            <f:selectItem itemLabel="Option 3" itemValue="3" />
-                        </p:selectOneRadio>
+                        <h:selectOneRadio id="submitStatus" value="#{searchMB.submitStatus}">                            
+                            <f:selectItem itemLabel="UnSubmitted" itemValue="0" />
+                            <f:selectItem itemLabel="Submitted" itemValue="1" />
+                            <f:selectItem itemLabel="Any" itemValue="2" />
+                        </h:selectOneRadio>
+
+                        <h:outputText value="Evaluation Status: " />
+                        <h:selectOneRadio id="evaluationStatus" value="#{searchMB.evaluationStatus}">
+                            <f:selectItem itemLabel="Undecided" itemValue="0" />
+                            <f:selectItem itemLabel="Accepted" itemValue="1" />
+                            <f:selectItem itemLabel="Rejected" itemValue="2" />
+                            <f:selectItem itemLabel="Any" itemValue="3" />
+                        </h:selectOneRadio>
 
                     </h:panelGrid>
-                    <p:commandButton value="Submit" update="panel" style="margin-right:20px;" />
+                    <p:commandButton value="Submit" update="panel" style="margin-right:20px;" action="#{searchMB.search()}"/>
                 </p:panel>
             </h:form>
 
