Authorization - Khan, Abraham - edit logics, Search & Evaluation logics - Dipesh

--- a/web/pages/Admin/createNewStaff.xhtml
+++ b/web/pages/Admin/createNewStaff.xhtml
@@ -45,7 +45,7 @@
                         <h:panelGroup/>
                         <p:commandButton 
                             value="Submit" 
-                            action ="#{regMB.saveRegInfo}" 
+                            action ="#{regMB.saveAdmissionStaffInfo}" 
                             ajax="false"/>
                     </h:panelGrid>
                 </p:panel>
