--- a/web/pages/applicant/registration.xhtml
+++ b/web/pages/applicant/registration.xhtml
@@ -40,7 +40,7 @@
                         <h:panelGroup/>
                         <p:commandButton 
                             value="Submit" 
-                            action ="#{regMB.saveRegInfo}" 
+                            action ="#{regMB.saveUserInfo}" 
                             ajax="false"/>
                     </h:panelGrid>
                 </p:panel>
