PersonalData Read/Write, Moved registration page, MenuCountry modified

--- a/web/pages/general/login.xhtml
+++ b/web/pages/general/login.xhtml
@@ -17,7 +17,7 @@
          <p:panel id="panel" style="margin-bottom:10px; width: 500px;">
 
                    
-             <h:messages style="color: #D20005"/>
+             <!--<h:messages style="color: #D20005"/>-->
         <p:panel>
             <f:facet name="header">Login</f:facet>
 
@@ -31,7 +31,9 @@
                     <h:inputSecret id="password" value="#{loginMB.password}" required="true" requiredMessage="Please enter Password"/>
 
                 </h:panelGrid>
+                <!--
                 <h:outputText value="#{loginMB.errormessage}" style="color:#D20005"/>
+                -->
             </div>
 
             <p>
