--- a/web/pages/general/registration.xhtml
+++ b/web/pages/general/registration.xhtml
@@ -20,7 +20,7 @@
                         <h:inputText  id="firstName" value="#{regMB.firstName}" required="true"/>  
 
                         <h:outputLabel for="middleName" value="Middle Name" styleClass="requiredLbl"/>
-                        <h:inputText  id ="middleName" value="#{regMB.middleName}" required="true"/>
+                        <h:inputText  id ="middleName" value="#{regMB.middleName}"/>
 
                         <h:outputLabel for="lastName" value="Last Name" styleClass="requiredLbl"/>
                         <h:inputText id="lastName" label="Last Name" value="#{regMB.lastName}" required="true"/>
