--- a/web/pages/applicant/newApplicationForm.xhtml
+++ b/web/pages/applicant/newApplicationForm.xhtml
@@ -12,9 +12,6 @@
         <ui:define name="body">
             <h:body>
           <h:form id="form">
-              <f:metadata>
-                  <f:viewAction action="#{personalDataMB.checkApplication()}"/>
-              </f:metadata>
                 <h:panelGrid columns="1" style="width: 100%">
                     <p:wizard id="wizard" >
                         <p:tab title="PersonalInformation" id="personalInfo">
@@ -28,7 +25,7 @@
                                                    styleClass="requiredLbl"/>
                                     <h:inputText id="firstName" 
                                                  label="First Name" 
-                                                 value="#{personalDataMB.firstName}" 
+                                                 value="#{personalDataMB.personalData.PDataFirstName}" 
                                                  required="true"/>
                                     <!--middle Name-->
                                     <h:outputLabel for="middleName" 
@@ -36,20 +33,20 @@
                                                    styleClass="optionalLbl"/>
                                     <h:inputText id="middleName" 
                                                  label="Middle Name" 
-                                                 value="#{personalDataMB.middleName}"
+                                                 value="#{personalDataMB.personalData.PDataMiddleName}"
                                                  />
                                     <!--Last Name-->
                                     <h:outputLabel for="LastName" 
                                                    value="Last Name" 
                                                    styleClass="requiredLbl"/>
                                     <h:inputText id="LastName" label="Last Name" 
-                                                 value="#{personalDataMB.lastName}" 
+                                                 value="#{personalDataMB.personalData.PDataLastName}" 
                                                  required="true"/>
                                     <!--gender-->
                                      <h:outputLabel for="gender" 
                                                    value="Gender" 
                                                    styleClass="requiredLbl"/>
-                                     <h:selectOneMenu  id="gender" value="#{personalDataMB.gender}" required="true"> 
+                                     <h:selectOneMenu  id="gender" value="#{personalDataMB.personalData.PDataGender}" required="true"> 
                                          <f:selectItem id="item1" itemLabel="Female" itemValue="F" />
                                          <f:selectItem id="item2" itemLabel="Male" itemValue="M" />
                                     </h:selectOneMenu>
@@ -57,14 +54,14 @@
                                       <h:outputLabel for="homeCountry" 
                                                    value="Home County " 
                                                    styleClass="optionalLbl"/>
-                                      <h:selectOneMenu  id="homeCountry" value="#{personalDataMB.homeCounty}"> 
+                                      <h:selectOneMenu  id="homeCountry" value="#{personalDataMB.personalData.PDataHomeCountry}"> 
                                           <f:selectItems value="#{personalDataMB.allCountries}" />
                                     </h:selectOneMenu>
                                      <!--Country-->
                                     <h:outputLabel for="country" 
                                                    value="County " 
                                                    styleClass="optionalLbl"/>
-                                    <h:selectOneMenu  id="country" value="#{personalDataMB.country}" > 
+                                    <h:selectOneMenu  id="country" value="#{personalDataMB.personalData.PDataCountry}" > 
                                         <f:selectItems value="#{personalDataMB.allCountries}" />
                                     </h:selectOneMenu>
                                      <!--City-->
@@ -72,67 +69,67 @@
                                                    value="City " 
                                                    styleClass="optionalLbl"/>
                                     <h:inputText id="city" label="City " 
-                                                 value="#{personalDataMB.city}" />
+                                                 value="#{personalDataMB.personalData.PDataCity}" />
                                      <!--State-->
                                      <h:outputLabel for="state" 
                                                    value="State " 
                                                    styleClass="optionalLbl"/>
                                     <h:inputText id="state" label="State " 
-                                                 value="#{personalDataMB.state}" />
+                                                 value="#{personalDataMB.personalData.PDataState}" />
                                     <!--address Line1-->
                                      <h:outputLabel for="addressLine1" 
                                                    value="AddressLine 1 " 
                                                    styleClass="optionalLbl"/>
                                     <h:inputText id="addressLine1" label="AddressLine 1 " 
-                                                 value="#{personalDataMB.addressLine1}" />
+                                                 value="#{personalDataMB.personalData.PDataAddressLine1}" />
                                     <br/>
                                      <!--address Line2-->
                                      <h:outputLabel for="addressLine2" 
                                                    value="AddressLine 2 " 
                                                    styleClass="optionalLbl"/>
                                     <h:inputText id="addressLine2" label="AddressLine 2 " 
-                                                 value="#{personalDataMB.addressLine2}" />
+                                                 value="#{personalDataMB.personalData.PDataAddressLine2}" />
                                     <!--Zip code-->
                                      <h:outputLabel for="zipcode" 
                                                    value="Zip Code " 
                                                    styleClass="optionalLbl"/>
                                     <h:inputText id="zipcode" label="zipCode " 
-                                                 value="#{personalDataMB.zipCode}" />
+                                                 value="#{personalDataMB.personalData.PDataZipCode}" />
                                     
                                      <!--home phone-->
                                      <h:outputLabel for="homePhone" 
                                                    value="Home phone " 
                                                    styleClass="optionalLbl"/>
                                     <h:inputText id="homePhone" label="homePhone " 
-                                                 value="#{personalDataMB.homePhone}" />
+                                                 value="#{personalDataMB.personalData.PDataHomePhone}" />
                                     <!--mobile phone-->
                                      <h:outputLabel for="mobilePhone" 
                                                    value="Mobile phone " 
                                                    styleClass="optionalLbl"/>
                                     <h:inputText id="mobilePhone" label="mobilePhone " 
-                                                 value="#{personalDataMB.mobilePhone}" />
+                                                 value="#{personalDataMB.personalData.PDataMobilePhone}" />
                                     
                                     <!--Skype id-->
                                      <h:outputLabel for="skypeId" 
                                                    value="Skype Id " 
                                                    styleClass="optionalLbl"/>
                                     <h:inputText id="skypeId" label="skypeId " 
-                                                 value="#{personalDataMB.skypeId}" />
+                                                 value="#{personalDataMB.personalData.PDataSkypeID}" />
                                      <!--Email-->
                                      <h:outputLabel for="email" 
                                                    value="E-mail " 
                                                    styleClass="optionalLbl"/>
                                     <h:inputText id="email" label="email " 
-                                                 value="#{personalDataMB.email}" />
+                                                 value="#{personalDataMB.personalData.PDataEmail}" />
                                     <!--Visa status-->
                                      <h:outputLabel for="visaStatus" 
                                                    value="Visa status " 
                                                    styleClass="optionalLbl"/>
                                     <h:inputText id="visaStatus" label="visaStatus " 
-                                                 value="#{personalDataMB.visaStatus}" />
+                                                 value="#{personalDataMB.personalData.PDataVisaStatus}" />
                                 </h:panelGrid>
                                 <p:commandButton id="saveButton1"
-                                                 action="#{personalDataMB.savePersonalData()}" value="Save" 
+                                                 action="#{personalDataMB.save}" value="Save" 
                                                  ajax="false"/> 
                             </p:panel>
                         </p:tab>
