Edited Delete Old Accounts, Corrected Search logics

--- a/web/pages/Admin/adminHomePage.xhtml
+++ b/web/pages/Admin/adminHomePage.xhtml
@@ -9,8 +9,8 @@
        <ui:composition template="../../resources/templates/adminTemplate.xhtml">
     
         <ui:define name="body">
-            <a href="createNewStaff.xhtml">Create New Staff</a>
-            <a href="deleteAccounts.xhtml">Delete Old Accounts</a>       
+            <a href="createNewStaff.xhtml">Create New Staff</a><br/>
+            <a href="deleteAccounts.xhtml">Delete Old Accounts</a><br/>       
         </ui:define>
     
        </ui:composition>
