--- a/web/pages/admissionStaff/reviewForm.xhtml
+++ b/web/pages/admissionStaff/reviewForm.xhtml
@@ -12,7 +12,7 @@
             <h:form>
                                 <p:messages/>
                 <f:metadata>
-                    <f:viewParam name="userId" value="#{reviewMB.userId}"/>
+                    <f:viewParam name="appId" value="#{reviewMB.appId}"/>
                     <f:viewAction action="#{reviewMB.loadApplicationData}"/>
                 </f:metadata>
                 
