--- a/web/pages/general/login.xhtml
+++ b/web/pages/general/login.xhtml
@@ -37,7 +37,7 @@
             </div>
 
             <p>
-              <i>Note - </i> You may login with the username 'admin' and a blank password.
+                <a href="./retrievePassword.xhtml">Forget Password</a>
             </p>
 
         </p:panel>
