--- a/web/pages/applicant/applicantHomePage.xhtml
+++ b/web/pages/applicant/applicantHomePage.xhtml
@@ -10,6 +10,7 @@
     
         <ui:define name="body">
             <h:form>
+                <!--
                 <p:panel header="Go to reset password page">
                     <h:panelGrid columns="2">
                         <h:panelGroup/>
@@ -20,6 +21,10 @@
                     </h:panelGrid>
 
                 </p:panel>
+                -->
+            <a href="resetPassword.xhtml">Reset Password</a><br/>         
+            <a href="evaluationStatus.xhtml">View Evaluation Status</a><br/>                
+            <a href="newApplicationForm.xhtml">Application</a><br/>      
             </h:form> 
         </ui:define>
     
